--- a/vintageshop/shop/templates/shop/admin_dashboard.html
+++ b/vintageshop/shop/templates/shop/admin_dashboard.html
@@ -34,6 +34,11 @@
     <a href="{% url 'logout' %}"><button>Logout</button></a>
     <a href="{% url 'admin_chat' %}"><button>จัดการแชท</button></a>
     <a href="{% url 'admin_order_list' %}"><button>จัดการคำสั่งซื้อ</button></a>
+    <a href="{% url 'admin_sales_report' %}"><button style="padding: 10px 20px; font-size: 16px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;"> 📊 ดูรายงานยอดขาย
+        </button>
+    </a>
+    
+
 
     <h2>เพิ่มสินค้า</h2>
     <form method="post" enctype="multipart/form-data">
